--- a/index.html
+++ b/index.html
@@ -7,12 +7,49 @@
     <style>
         :root{
         --background-color: #f5f2f0;
+        --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     body{
         background-color: var(--background-color);
     }
+    header{
+      text-align: center;
+      font-size: 50px;
+      font-family: var(--font);
+      font-weight: bold;
+      margin: 20px;
+    }
+    .head{
+      display: grid;
+      grid-template-columns: 25% 1fr;
+      padding-left: 28px;
+      padding-right: 50px;
+    }
+    .right{
+      display: grid;
+      place-items: center end;
+    }
+    .right>a{
+      font-family: var(--font);
+      font-size: 20px;
+      color: black;
+      font-weight: bold;
+      text-decoration: none;
+    }
     </style>
     <body>
+      <div class="head">
+        <div style="display: grid; grid-template-columns: 18% auto; place-items: center start;">
+          <img style="max-width: 40px;" src="https://lh6.googleusercontent.com/bBgi_JTwcgC8eudvmEg41mTfxRd2fd5i7o-nzHwpfDG_MSOGrp0L8_4NuSrApW3jXvsCgNnCAyQJ4DP4eZEltNg=w16383">
+          <span style="font-family: var(--font); font-size: 20px;">Ridne Slovo</span>
+        </div>
+        <div class="right">
+          <a href="https://en.ridneslovo.ca/">Back to website</a>
+        </div>
+      </div>
+      <header>
+        Ridne Shop
+      </header>
         <div name="featured" id='collection-component-1622695616541'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
