--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       :root{
         --background-color: #f5f2f0;
         --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        --primary-color: #ffd44c
       }
       main{
         width: 100%;
@@ -38,7 +39,7 @@
         display: grid;
         grid-template-columns: minmax(150px, 25%) 1fr;
         padding-left: 28px;
-        padding-right: 50px;
+        padding-right: 30px;
       }
       .left{
         display: grid; 
@@ -53,6 +54,7 @@
         .head{
           grid-template-rows: auto auto;
           grid-template-columns: none;
+          gap: 10px;
         }
         .left{
           width: 100%;
@@ -73,8 +75,12 @@
           place-items: center;
         }
       }
-      .right>div>a{
-        margin: 5px;
+      .right>div{
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
+        }
+      .link{
         flex: 1 1 auto;
         font-family: var(--font);
         font-size: 20px;
@@ -82,13 +88,17 @@
         font-weight: bold;
         text-decoration: none;
       }
+      .link-container{
+        padding-bottom: 5px;
+        margin: 10px;
+        border-bottom-style: solid;
+        border-bottom-width: 5px;
+        border-bottom-color: var(--primary-color);
+      }
       .collection{
         width: 100%;
         display: grid;
         place-items: center;
-      }
-      .collection>*{
-        /*max-width: 350px;*/
       }
     </style>
     <body>
@@ -100,8 +110,12 @@
           </div>
           <div class="right">
             <div>
-              <a href="https://en.ridneslovo.ca/">Back to website</a>
-              <a href="https://en.ridneslovo.ca/">Back to website</a>
+              <div class="link-container">
+                <a class="link" href="#featured">Featured</a>
+              </div>
+              <div class="link-container">
+                <a class="link" href="https://en.ridneslovo.ca/">Back to website</a>
+              </div>
             </div>
           </div>
         </div>
@@ -110,7 +124,7 @@
         </div>
       </header>
       <main>
-      <div class="collection"><div name="featured" id='collection-component-1622695616541'></div></div>
+      <div class="collection" id="featured"><div name="featured" id='collection-component-1622695616541'></div></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
