Removed Unisex section

--- a/index.html
+++ b/index.html
@@ -898,9 +898,10 @@
         <div id="apparel">
           <h1>Apparel</h1>
           <div class="links-box">
+            <!--
             <div class="link-container">
               <a class="link" href="#unisex">Unisex</a>
-            </div>
+            </div>-->
             <div class="link-container">
               <a class="link" href="#women">Women</a>
             </div>
@@ -911,7 +912,7 @@
               <a class="link" href="#kids">Kids</a>
             </div>
           </div>
-          <!--UNISEX-->
+          <!--UNISEX
           <div id="unisex">
             <h2>Unisex</h2>
             <div id='collection-component-1624334390985'></div>
@@ -1149,7 +1150,7 @@
 })();
 /*]]>*/
 </script>
-          </div>
+          </div>-->
           <!--WOMEN-->
           <div id="women">
             <h2>Women</h2>
