Fixed the featured product

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
       <main>
         <div class="top">
           <!--FEATURED PRODUCT NEXT DIV-->
-          <div id='product-component-1637299538627'></div>
+          <div class="block" id="abetka">
+            <div id='product-component-1637299538627'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
