Moved image links to github host

--- a/body.html
+++ b/body.html
@@ -232,13 +232,13 @@ options: {
   <!--END OF FEATURED PRODUCT-->
   <div class="banners">
     <div>
-      <a href="#gifts"><img src="Gifts banner.jpg"></a>
+      <a href="#gifts"><img src="https://github.com/Collert/RidneStore/blob/a2b7b42ebe39f734a3cd3212e56aecb121486c4c/Gifts%20banner.jpg"></a>
     </div>
     <div>
-      <a href="#apparel"><img src="apparel banner.jpg"></a>
+      <a href="#apparel"><img src="https://github.com/Collert/RidneStore/blob/a2b7b42ebe39f734a3cd3212e56aecb121486c4c/apparel%20banner.jpg"></a>
     </div>
     <div>
-      <a href="#seasonal"><img src="Seasonal banner.jpg"></a>
+      <a href="#seasonal"><img src="https://github.com/Collert/RidneStore/blob/a2b7b42ebe39f734a3cd3212e56aecb121486c4c/Seasonal%20banner.jpg"></a>
     </div>
   </div>
 </div>
